Massive rewrite; demo usage

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,9 @@
-<h2 id="title">Welcome to Ember</h2>
+<p>Demos:
+  {{#link-to 'resize'}}Resize{{/link-to}} ||
+  {{#link-to 'scroll'}}Scroll{{/link-to}} ||
+  {{#link-to 'styles'}}Style{{/link-to}} ||
+  {{#link-to 'hashbound'}}Hash{{/link-to}} ||
+  {{#link-to 'iterator'}}Iterator{{/link-to}}
+</p>
 
 {{outlet}}
